Acrescentando valor das vendas

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>pagina home</h1>
+    <a href="vendas,htmal">ir para a pagina de vendas</a>
 </body>
-</html><a href=""vendas.html">ir para pagina de vendas</a>
+</html
