--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>pagina de vendas</h1>
-    a href="index.html">voltar para pagina inicial</a>
+    <a href="index.html">voltar para pagina inicial</a>
+    <p>vendas R$ = 5000,00</p>
 </body>
-</html>
+</html> 
